--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         },
         {
             "type":"composer",
-            "url":"http://wpackagist.org"
+            "url":"https://wpackagist.org"
         }
     ],
 
