--- a/.htaccess
+++ b/.htaccess
@@ -14,6 +14,6 @@ RewriteCond %{REQUEST_FILENAME} -f [OR]
 RewriteCond %{REQUEST_FILENAME} -d
 RewriteRule ^ - [L]
 RewriteRule ^(wp-(content|admin|includes).*) $1 [L]
-RewriteRule ^(.*\.php)$ $1 [L]
+RewriteRule ^(.*\.php)$ wp/$1 [L]
 RewriteRule . index.php [L]
 # END WordPress
