--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,7 @@
 
 # Admin redirect
 RedirectMatch 301 /admin/(.*) /wp/wp-admin/$1
+RedirectMatch 301 /wp-admin/(.*) /wp/wp-admin/$1
 
 # Rewrite rules -
 <IfModule mod_rewrite.c>
