Nested pages plugin.

--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
         "wpackagist-plugin/wp-editor-widget": "0.5.5",
         "wpackagist-plugin/all-in-one-seo-pack": "2.2.7.5",
         "wpackagist-plugin/varnish-http-purge": "^3.7.2",
-        "wpackagist-plugin/stream": "3.0.4"
+        "wpackagist-plugin/stream": "3.0.4",
+        "wpackagist-plugin/wp-nested-pages": "1.5.4"
     },
 
     "extra": {
