Added plugins Tablepress, Visualizer and WP API.
Added plugins Tablepress, Visualizer and WP API.

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,12 @@
         {
             "type":"composer",
             "url":"https://wpackagist.org"
+        },
+        {
+            "type":"vcs",
+            "url":"https://github.com/WP-API/WP-API.git"
         }
+
     ],
 
     "require": {
@@ -41,7 +46,10 @@
         "wpackagist-plugin/all-in-one-seo-pack": "2.2.7.5",
         "wpackagist-plugin/varnish-http-purge": "^3.7.2",
         "wpackagist-plugin/stream": "3.0.4",
-        "wpackagist-plugin/wp-nested-pages": "1.5.4"
+        "wpackagist-plugin/wp-nested-pages": "1.5.4",
+        "wpackagist-plugin/tablepress": "1.7",
+        "wpackagist-plugin/visualizer": "1.5.4",
+        "WP-API/WP-API.git": "2.0"
     },
 
     "extra": {
