--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
         "wpackagist-plugin/wp-nested-pages": "1.5.4",
         "wpackagist-plugin/tablepress": "1.7",
         "wpackagist-plugin/visualizer": "1.5.4",
-        "WP-API/WP-API.git": "2.0"
+        "WP-API/WP-API": "2.0-beta1"
     },
 
     "extra": {
