--- a/composer.json
+++ b/composer.json
@@ -28,11 +28,7 @@
         {
             "type":"composer",
             "url":"https://wpackagist.org"
-        },
-        {
-            "type":"vcs",
-            "url":"https://github.com/WP-API/WP-API.git"
-        }
+        }        
 
     ],
 
@@ -48,8 +44,7 @@
         "wpackagist-plugin/stream": "3.0.4",
         "wpackagist-plugin/wp-nested-pages": "1.5.4",
         "wpackagist-plugin/tablepress": "1.7",
-        "wpackagist-plugin/visualizer": "1.5.4",
-        "WP-API/WP-API": "2.0-beta1.2"
+        "wpackagist-plugin/visualizer": "1.5.4"
     },
 
     "extra": {
