Added content scheduler plugin

--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,13 @@
             "url": "https://github.com/helsingborg-stad/open-hours.git"
         },
         {
+            "type": "vcs",
+            "url": "https://github.com/helsingborg-stad/content-scheduler.git"
+        },
+        {
             "type":"composer",
             "url":"https://wpackagist.org"
-        }        
+        }
 
     ],
 
@@ -38,13 +42,14 @@
         "helsingborg-stad/Modularity": ">=1.0.0",
         "helsingborg-stad/municipio": ">=1.0.0",
         "helsingborg-stad/lix-calculator": "^1.0.1",
+        "helsingborg-stad/content-scheduler": "^1.0.0",
         "wpackagist-plugin/wp-editor-widget": "0.5.5",
         "wpackagist-plugin/all-in-one-seo-pack": "2.2.7.5",
         "wpackagist-plugin/varnish-http-purge": "^3.7.2",
         "wpackagist-plugin/stream": "3.0.4",
         "wpackagist-plugin/wp-nested-pages": "1.5.4",
         "wpackagist-plugin/tablepress": "1.7",
-        "wpackagist-plugin/visualizer": "1.5.4"
+        "wpackagist-plugin/visualizer": "1.5.5"
     },
 
     "extra": {
