--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
         "helsingborg-stad/Modularity": ">=1.0.0",
         "helsingborg-stad/municipio": ">=1.0.0",
         "helsingborg-stad/lix-calculator": "^1.0.1",
-        "helsingborg-stad/content-scheduler": "^1.0.0",
+        "helsingborg-stad/content-scheduler": ">=1.0.0",
         "wpackagist-plugin/wp-editor-widget": "0.5.5",
         "wpackagist-plugin/all-in-one-seo-pack": "2.2.7.5",
         "wpackagist-plugin/varnish-http-purge": "^3.7.2",
