--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,10 @@
             "url": "https://github.com/helsingborg-stad/content-scheduler.git"
         },
         {
+            "type": "vcs",
+            "url": "https://github.com/helsingborg-stad/modularity-dictionary.git"
+        },
+        {
             "type":"composer",
             "url":"https://wpackagist.org"
         }
@@ -43,6 +47,7 @@
         "helsingborg-stad/municipio": ">=1.0.0",
         "helsingborg-stad/lix-calculator": "^1.0.1",
         "helsingborg-stad/content-scheduler": ">=1.0.0",
+        "helsingborg-stad/modularity-dictionary": ">=1.0.0",
         "wpackagist-plugin/wp-editor-widget": "0.5.5",
         "wpackagist-plugin/all-in-one-seo-pack": "2.2.7.5",
         "wpackagist-plugin/varnish-http-purge": "^3.7.2",
