Broken link detector

--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,10 @@
             "url": "https://github.com/helsingborg-stad/force-ssl.git"
         },
         {
+            "type": "vcs",
+            "url": "https://github.com/helsingborg-stad/broken-link-detector.git"
+        },
+        {
             "type":"composer",
             "url":"https://wpackagist.org"
         }
@@ -58,6 +62,7 @@
         "helsingborg-stad/modularity-dictionary": ">=1.0.0",
         "helsingborg-stad/modularity-guides": ">=0.1.0",
         "helsingborg-stad/force-ssl": ">=1.0.0",
+        "helsingborg-stad/broken-link-detector": ">=1.0.0",
         "wpackagist-plugin/wp-editor-widget": "0.5.5",
         "wpackagist-plugin/all-in-one-seo-pack": "2.2.7.5",
         "wpackagist-plugin/varnish-http-purge": "^3.7.2",
