--- a/composer.json
+++ b/composer.json
@@ -79,6 +79,9 @@
         "helsingborg-stad/force-ssl": ">=1.0.0",
         "helsingborg-stad/readspeaker-helper": ">=1.0.0",
         "helsingborg-stad/broken-link-detector": ">=1.0.0",
+        "helsingborg-stad/attachment-revisions": ">=1.0.0",
+        "helsingborg-stad/Customer-feedback": ">=1.0.0",
+        "helsingborg-stad/larm": ">=1.0.0",
         "wpackagist-plugin/wp-editor-widget": "0.5.5",
         "wpackagist-plugin/all-in-one-seo-pack": "2.2.7.5",
         "wpackagist-plugin/varnish-http-purge": "^3.7.2",
