--- a/composer.json
+++ b/composer.json
@@ -62,6 +62,10 @@
             "url": "https://github.com/helsingborg-stad/larm.git"
         },
         {
+            "type": "vcs",
+            "url": "https://github.com/helsingborg-stad/ACF-UX-collapse.git"
+        },
+        {
             "type":"composer",
             "url":"https://wpackagist.org"
         },
@@ -80,6 +84,7 @@
         "helsingborg-stad/force-ssl": ">=1.0.0",
         "helsingborg-stad/readspeaker-helper": ">=1.0.0",
         "helsingborg-stad/broken-link-detector": ">=1.0.0",
+        "helsingborg-stad/acf-ux-collapse": ">=1.0.0",
         "wpackagist-plugin/wp-editor-widget": "0.5.5",
         "wpackagist-plugin/all-in-one-seo-pack": "2.2.7.5",
         "wpackagist-plugin/varnish-http-purge": "^3.7.2",
