--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,3 @@
-# Secutiry rules & Wordpress default configuration.
-
-# Admin redirect
-#RedirectMatch 301 /admin/(.*) /wp/wp-admin/$1 (Creates a table press error)
-
 # Rewrite rules -
 <IfModule mod_rewrite.c>
     RewriteEngine On
@@ -55,3 +50,7 @@
 <IfModule mod_headers.c>
     Header always append X-Frame-Options SAMEORIGIN
 </IfModule>
+
+# Force download of dwg files
+AddType application/acad .dwg
+AddType application/octet-stream .dwg
