--- a/composer.json
+++ b/composer.json
@@ -70,6 +70,18 @@
             "url": "https://github.com/TobiasBg/TablePress.git"
         },
         {
+            "type": "vcs",
+            "url": "https://github.com/helsingborg-stad/custom-short-links.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/helsingborg-stad/better-post-UI.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/helsingborg-stad/Search-notices.git"
+        },
+        {
             "type":"composer",
             "url":"https://wpackagist.org"
         }
@@ -91,6 +103,9 @@
         "helsingborg-stad/Customer-feedback": ">=1.0.0",
         "helsingborg-stad/larm": ">=1.0.0",
         "helsingborg-stad/acf-ux-collapse": ">=1.0.0",
+        "helsingborg-stad/search-notices": ">=1.0.0",
+        "helsingborg-stad/better-post-ui": ">=1.0.0",
+        "helsingborg-stad/custom-short-links": ">=1.0.0",
         "tobiasbg/tablepress": "dev-master",
         "wpackagist-plugin/wp-editor-widget": "0.5.5",
         "wpackagist-plugin/all-in-one-seo-pack": "2.2.7.5",
@@ -98,7 +113,9 @@
         "wpackagist-plugin/stream": "3.0.4",
         "wpackagist-plugin/wp-nested-pages": "1.5.4",
         "wpackagist-plugin/rest-api": "2.0-beta13",
-        "wpackagist-plugin/awesome-support": "3.3.1"
+        "wpackagist-plugin/awesome-support": "3.3.1",
+        "wpackagist-plugin/mce-table-buttons": "^3.0.0",
+        "wpackagist-plugin/wordpress-importer": "0.6.3"
     },
 
     "extra": {
