--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,9 @@
 # Underscore to hypen fix
 <IfModule mod_rewrite.c>
-    RewriteCond %{HTTP_HOST} tempkampanj\.helsingborg\.se [NC]
+    RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^([^_]*)_([^_]*)$ /$1-$2 [L,R=302]
 
-    RewriteCond %{HTTP_HOST} tempkampanj\.helsingborg\.se [NC]
+    RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^([^_]*)_([^_]*)_(.*) $1-$2-$3 [E=USCORE:1]
 
     RewriteCond %{ENV:REDIRECT_USCORE} =1
