--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,7 @@
 # Underscore to hypen fix
 <IfModule mod_rewrite.c>
     RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule  .?  -  [S=6]
     RewriteRule ^(.*)_(.*)_(.*)_(.*)_(.*)_(.*)_(.*)$ /$1-$2-$3-$4-$5-$6-$7 [R=301,L]
     RewriteRule ^(.*)_(.*)_(.*)_(.*)_(.*)_(.*)$ /$1-$2-$3-$4-$5-$6 [R=301,L]
     RewriteRule ^(.*)_(.*)_(.*)_(.*)_(.*)$ /$1-$2-$3-$4-$5 [R=301,L]
