--- a/composer.json
+++ b/composer.json
@@ -97,7 +97,7 @@
         "helsingborg-stad/Modularity": ">=1.0.0",
         "helsingborg-stad/municipio": ">=1.0.0",
         "helsingborg-stad/familjenhelsingborg": ">=1.0.0",
-        "helsingborg-stad/lix-calculator": "^1.0.1",
+        "helsingborg-stad/lix-calculator": ">=1.0.0",
         "helsingborg-stad/content-scheduler": ">=1.0.0",
         "helsingborg-stad/modularity-dictionary": ">=1.0.0",
         "helsingborg-stad/modularity-guides": ">=0.1.0",
