--- a/composer.json
+++ b/composer.json
@@ -106,11 +106,11 @@
         "helsingborg-stad/better-post-ui": ">=1.0.0",
         "helsingborg-stad/custom-short-links": ">=1.0.0",
         "helsingborg-stad/wp-listings": ">=1.0.0",
-        "wpackagist-plugin/tablepress": "1.7",
+        "wpackagist-plugin/tablepress": ">=1.0.0",
         "wpackagist-plugin/wp-editor-widget": "0.5.5",
         "wpackagist-plugin/all-in-one-seo-pack": "2.3.10.2",
         "wpackagist-plugin/varnish-http-purge": "^3.7.2",
-        "wpackagist-plugin/stream": "3.0.7",
+        "wpackagist-plugin/stream": "3.1.1",
         "wpackagist-plugin/wp-nested-pages": "1.6.3",
         "wpackagist-plugin/rest-api": "2.0-beta15",
         "wpackagist-plugin/mce-table-buttons": "^3.0.0",
