added event integration package

--- a/composer.json
+++ b/composer.json
@@ -82,6 +82,10 @@
             "url": "https://github.com/helsingborg-stad/wp-listings.git"
         },
         {
+            "type": "vcs",
+            "url": "https://github.com/helsingborg-stad/api-event-manager-integration.git"
+        },
+        {
             "type":"composer",
             "url":"https://wpackagist.org"
         }
@@ -106,6 +110,7 @@
         "helsingborg-stad/better-post-ui": ">=1.0.0",
         "helsingborg-stad/custom-short-links": ">=1.0.0",
         "helsingborg-stad/wp-listings": ">=1.0.0",
+        "helsingborg-stad/api-event-manager-integration": ">=0.1.0",
         "wpackagist-plugin/tablepress": ">=1.0.0",
         "wpackagist-plugin/wp-editor-widget": "0.5.5",
         "wpackagist-plugin/all-in-one-seo-pack": "2.3.10.2",
