--- a/composer.json
+++ b/composer.json
@@ -115,7 +115,8 @@
         "wpackagist-plugin/rest-api": "2.0-beta15",
         "wpackagist-plugin/mce-table-buttons": "^3.0.0",
         "wpackagist-plugin/wordpress-importer": "0.6.3",
-        "wpackagist-plugin/autodescription": "2.7.0"
+        "wpackagist-plugin/autodescription": "2.7.0",
+        "wpackagist-plugin/elasticpress": "2.2"
     },
 
     "extra": {
