--- a/composer.json
+++ b/composer.json
@@ -102,6 +102,10 @@
             "url": "https://github.com/helsingborg-stad/multisite-role-propagation.git"
         },
         {
+            "type": "vcs",
+            "url": "https://github.com/helsingborg-stad/modularity-form-builder.git"
+        },
+        {
             "type":"composer",
             "url":"https://wpackagist.org"
         }
@@ -131,6 +135,7 @@
         "helsingborg-stad/wp-content-translator": ">=1.0.0",
         "helsingborg-stad/active-directory-api-wp-integration": ">=1.0.0",
         "helsingborg-stad/multisite-role-propagation": ">=1.0.0",
+        "helsingborg-stad/modularity-form-builder": ">=1.0.0",
         "wpackagist-plugin/tablepress": ">=1.0.0",
         "wpackagist-plugin/wp-editor-widget": "0.5.5",
         "wpackagist-plugin/all-in-one-seo-pack": "2.3.10.2",
