--- a/composer.json
+++ b/composer.json
@@ -106,6 +106,10 @@
             "url": "https://github.com/helsingborg-stad/modularity-form-builder.git"
         },
         {
+            "type": "vcs",
+            "url": "https://github.com/helsingborg-stad/acf-export-manager.git"
+        },
+        {
             "type":"composer",
             "url":"https://wpackagist.org"
         }
