Fixes merge conflict

--- a/composer.json
+++ b/composer.json
@@ -114,6 +114,10 @@
             "url": "https://github.com/helsingborg-stad/modularity-sections.git"
         },
         {
+            "type": "vcs",
+            "url": "https://github.com/helsingborg-stad/wp-page-for-posttype.git"
+        },
+        {
             "type":"composer",
             "url":"https://wpackagist.org"
         }
@@ -144,6 +148,8 @@
         "helsingborg-stad/active-directory-api-wp-integration": ">=1.0.0",
         "helsingborg-stad/multisite-role-propagation": ">=1.0.0",
         "helsingborg-stad/modularity-form-builder": ">=1.0.0",
+        "helsingborg-stad/modularity-sections": ">=1.0.0",
+        "helsingborg-stad/wp-page-for-posttype": ">=1.0.0",
         "wpackagist-plugin/tablepress": ">=1.0.0",
         "wpackagist-plugin/wp-editor-widget": "0.5.5",
         "wpackagist-plugin/all-in-one-seo-pack": "2.3.10.2",
