--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,63 @@
-# Config
-wp-config.php
+# Config #
+##########
+/config/cache.php
+/config/database.php
+/config/developer.php
+/config/multisite.php
+/config/salts.php
 
-#Datasets
-!/datasets/*
-!/datasets/dcat/*
-
-# Plugins
-/wp-content/plugins/*
-
-# Themes
-/wp-content/themes/*
-!/wp-content/themes/dunkerskulturhus
-/wp-content/themes/dunkerskulturhus/node_modules/
-!/wp-content/themes/dunkerskulturhus/assets/dist/*/*
-
-# Upload
-/wp-content/uploads/*
-/wp-content/uploads/cache/*
-/wp-content/uploads/cache/blade-cache/*
-!/wp-content/uploads/
-!/wp-content/uploads/cache/
-!/wp-content/uploads/blade-cache/
-
-# Vendor directories
-/vendor
-/wp
-
-# Composer generated files
+# Municipio dependencies #
+##########################
+wp/
+srdb/
+vendor/
+wp-content/*
+!wp-content/mu-plugins
+!wp-content/mu-plugins/*
+!wp-content/object-cache.php
 composer.lock
 
-# Operating system files
+# Themes dependencies #
+##########################
+wp-content/themes/*
+!wp-content/themes
+!wp-content/themes/helsingborg
+wp-content/themes/helsingborg/node_modules
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
