--- a/composer.json
+++ b/composer.json
@@ -10,117 +10,8 @@
     "minimum-stability" : "stable",
     "repositories": [
         {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/familjenhelsingborg.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/municipio.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/Modularity.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/lix-calculator.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/open-hours.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/content-scheduler.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/modularity-dictionary.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/modularity-guides.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/force-ssl.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/readspeaker-helper.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/broken-link-detector.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/Customer-feedback.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/ACF-UX-collapse.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/TobiasBg/TablePress.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/custom-short-links.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/better-post-UI.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/Search-notices.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/search-statistics.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/wp-listings.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/api-event-manager-integration.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/wp-content-translator.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/active-directory-api-wp-integration.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/multisite-role-propagation.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/modularity-form-builder.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/acf-export-manager.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/modularity-sections.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/wp-page-for-posttype.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/helsingborg-stad/google-analythics.git"
-
+            "type":"composer",
+            "url":"https://packagist.org"
         },
         {
             "type":"composer",
