Adds algolia plugin

--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,8 @@
         "wpackagist-plugin/mce-table-buttons": "^3.0.0",
         "wpackagist-plugin/wordpress-importer": "0.6.3",
         "wpackagist-plugin/autodescription": "2.7.0",
-        "wpackagist-plugin/elasticpress": "2.2"
+        "wpackagist-plugin/elasticpress": "2.2",
+        "wpackagist-plugin/search-by-algolia-instant-relevant-results": "2.9.3"
     },
 
     "extra": {
