--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,7 @@
         "wpackagist-plugin/tablepress": ">=1.0.0",
         "wpackagist-plugin/wp-editor-widget": "0.5.5",
         "wpackagist-plugin/all-in-one-seo-pack": "2.3.10.2",
-        "wpackagist-plugin/varnish-http-purge": "^3.7.2",
+        "wpackagist-plugin/varnish-http-purge": ">=4.3.1",
         "wpackagist-plugin/stream": "3.1.1",
         "wpackagist-plugin/wp-nested-pages": "1.6.5.2",
         "wpackagist-plugin/rest-api": "2.0-beta15",
