--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ vendor/
 wp-content/*
 !wp-content/mu-plugins
 !wp-content/mu-plugins/*
+wp-content/mu-plugins/attachmentDownloader.php
 !wp-content/object-cache.php
 composer.lock
 
