--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,8 @@
         "wpackagist-plugin/autodescription": ">=3.0.4",
         "wpackagist-plugin/elasticpress": "2.2",
         "helsingborg-stad/algolia-multisite-enabler": "^1.0",
-        "wpackagist-plugin/wp-mail-smtp": "^1.2"
+        "wpackagist-plugin/wp-mail-smtp": "^1.2",
+        "wpackagist-plugin/classic-editor": "^0.4.0"
     },
 
     "extra": {
