--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,6 @@
         "wpackagist-plugin/wp-editor-widget": "0.5.5",
         "wpackagist-plugin/all-in-one-seo-pack": "2.3.10.2",
         "wpackagist-plugin/varnish-http-purge": ">=4.3.1",
-        "wpackagist-plugin/stream": "3.2.3",
         "wpackagist-plugin/wp-nested-pages": "1.6.5.2",
         "wpackagist-plugin/rest-api": "2.0-beta15",
         "wpackagist-plugin/mce-table-buttons": "^3.0.0",
@@ -61,7 +60,8 @@
         "wpackagist-plugin/elasticpress": "2.2",
         "helsingborg-stad/algolia-multisite-enabler": "^1.0",
         "wpackagist-plugin/wp-mail-smtp": "^1.2",
-        "helsingborg-stad/attachment-revisions": "^1.2"
+        "helsingborg-stad/attachment-revisions": "^1.2",
+        "wpackagist-plugin/redirection": "3.4.1"
     },
 
     "extra": {
