--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,7 @@
         "wpackagist-plugin/autodescription": ">=3.0.4",
         "wpackagist-plugin/wp-mail-smtp": "^1.2",
         "wpackagist-plugin/redirection": "3.4.1",
-        "wpackagist-plugin/classic-editor": "^0.4.0"
+        "wpackagist-plugin/classic-editor":"0.5"
     },
 
     "extra": {
