--- a/composer.json
+++ b/composer.json
@@ -64,7 +64,8 @@
         "helsingborg-stad/modularity-resource-booking": "1.4.3",
         "helsingborg-stad/modularity-login-form": "^1.0",
         "wpackagist-plugin/user-switching": "^1.4",
-        "helsingborg-stad/modularity-json-render": "^1.1"
+        "helsingborg-stad/modularity-json-render": "^1.1",
+        "wpackagist-plugin/woocommerce": "^3.5"
     },
     "extra": {
         "wordpress-install-dir": "wp",
