--- a/composer.json
+++ b/composer.json
@@ -65,7 +65,8 @@
         "helsingborg-stad/modularity-login-form": "^1.0",
         "wpackagist-plugin/user-switching": "^1.4",
         "helsingborg-stad/modularity-json-render": "^1.1",
-        "wpackagist-plugin/woocommerce": "^3.5"
+        "wpackagist-plugin/woocommerce": "^3.5",
+        "wpackagist-plugin/woo-checkout-field-editor-pro": "^1.3"
     },
     "extra": {
         "wordpress-install-dir": "wp",
