--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,8 @@
         "wpackagist-plugin/user-switching": "^1.4",
         "helsingborg-stad/modularity-json-render": "^1.1",
         "wpackagist-plugin/woocommerce": "^3.5",
-        "wpackagist-plugin/woo-checkout-field-editor-pro": "^1.3"
+        "wpackagist-plugin/woo-checkout-field-editor-pro": "^1.3",
+        "helsingborg-stad/import-rss-feed": "^0.3.1"
     },
     "extra": {
         "wordpress-install-dir": "wp",
