--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,7 @@
         "helsingborg-stad/wp-page-for-post-type": ">=1.0.0",
         "helsingborg-stad/google-analythics": ">=1.0.0",
         "helsingborg-stad/modularity-checklist": ">=1.0.0",
+        "helsingborg-stad/idea-manager": ">=1.1.1",
         "helsingborg-stad/algolia-multisite-enabler": "^1.0",
         "helsingborg-stad/attachment-revisions": "^1.2",
         "wpackagist-plugin/tablepress": ">=1.9",
