--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
         "helsingborg-stad/wp-content-translator": ">=1.0.0",
         "helsingborg-stad/active-directory-api-wp-integration": ">=1.0.0",
         "helsingborg-stad/multisite-role-propagation": ">=1.0.0",
-        "helsingborg-stad/modularity-form-builder": ">=1.0.0",
+        "helsingborg-stad/modularity-form-builder": "1.8.4",
         "helsingborg-stad/modularity-sections": ">=1.0.0",
         "helsingborg-stad/wp-page-for-post-type": ">=1.0.0",
         "helsingborg-stad/google-analythics": ">=1.0.0",
@@ -68,7 +68,9 @@
         "helsingborg-stad/modularity-json-render": "^1.1",
         "wpackagist-plugin/woocommerce": "^3.5",
         "wpackagist-plugin/woo-checkout-field-editor-pro": "^1.3",
-        "helsingborg-stad/import-rss-feed": "^0.3.1"
+        "helsingborg-stad/import-rss-feed": "^0.3.1",
+        "helsingborg-stad/student-council-protocols": "^1.0.0",
+        "helsingborg-stad/student-council-protocols-theme": "^1.0.0"
     },
     "extra": {
         "wordpress-install-dir": "wp",
