--- a/composer.json
+++ b/composer.json
@@ -69,7 +69,7 @@
         "wpackagist-plugin/woocommerce": "^3.5",
         "wpackagist-plugin/woo-checkout-field-editor-pro": "^1.3",
         "helsingborg-stad/import-rss-feed": "^0.3.1",
-        "helsingborg-stad/student-council-protocols": ">=1.0.4",
+        "helsingborg-stad/student-council-protocols": "^1.0.5",
         "helsingborg-stad/student-council-protocols-theme": "^1.0.0"
     },
     "extra": {
