--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,8 @@
         "wpackagist-plugin/woo-checkout-field-editor-pro": "^1.3",
         "helsingborg-stad/import-rss-feed": "^0.3.1",
         "helsingborg-stad/student-council-protocols-theme": "^1.0.0",
-        "helsingborg-stad/student-council-protocols": "^1.0.7"
+        "helsingborg-stad/student-council-protocols": "^1.0.7",
+        "wpackagist-plugin/wp-rest-filter": "^1.4"
     },
     "extra": {
         "wordpress-install-dir": "wp",
