helsingborg-stad/municipio-innovation-theme 1.0.2

--- a/composer.json
+++ b/composer.json
@@ -81,7 +81,8 @@
         "helsingborg-stad/modularity-comments": "^1.0",
         "helsingborg-stad/api-project-manager-integration": "1.4.4",
         "helsingborg-stad/algolia-index-modularity-addon": "^1.0",
-        "helsingborg-stad/algolia-index": "^1.0"
+        "helsingborg-stad/algolia-index": "^1.0",
+        "helsingborg-stad/municipio-innovation-theme": "1.0.2"
     },
     "extra": {
         "wordpress-install-dir": "wp",
