--- a/composer.json
+++ b/composer.json
@@ -82,7 +82,10 @@
         "helsingborg-stad/api-project-manager-integration": "1.4.5",
         "helsingborg-stad/algolia-index-modularity-addon": "^1.0",
         "helsingborg-stad/algolia-index": "^1.0",
-        "helsingborg-stad/municipio-innovation-theme": "1.0.2"
+        "helsingborg-stad/municipio-innovation-theme": "1.0.2",
+        "helsingborg-stad/action-municipio-childtheme": "^1.0",
+        "helsingborg-stad/algolia-index-js-searchpage-addon": "^1.0",
+        "wpackagist-plugin/acf-to-rest-api": "^3.2"
     },
     "extra": {
         "wordpress-install-dir": "wp",
