--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "composer/installers": "~1.0",
         "johnpbloch/wordpress": "^5.0.0",
         "helsingborg-stad/Modularity": ">=1.0.0",
-        "helsingborg-stad/municipio": ">=1.0.0",
+        "helsingborg-stad/municipio": "1.33.3",
         "helsingborg-stad/familjenhelsingborg": "1.0.2",
         "helsingborg-stad/lix-calculator": ">=1.0.0",
         "helsingborg-stad/content-scheduler": ">=1.0.0",
