Installing wpackagist-plugin/wp-webhooks (2.0.4)

--- a/composer.json
+++ b/composer.json
@@ -85,7 +85,8 @@
         "helsingborg-stad/municipio-innovation-theme": "1.1.0",
         "helsingborg-stad/action-municipio-childtheme": "^1.0",
         "helsingborg-stad/algolia-index-js-searchpage-addon": "^1.0",
-        "wpackagist-plugin/acf-to-rest-api": "^3.2"
+        "wpackagist-plugin/acf-to-rest-api": "^3.2",
+        "wpackagist-plugin/wp-webhooks": "^2.0"
     },
     "extra": {
         "wordpress-install-dir": "wp",
