--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
         "helsingborg-stad/wp-content-translator": ">=1.0.0",
         "helsingborg-stad/active-directory-api-wp-integration": ">=1.0.0",
         "helsingborg-stad/multisite-role-propagation": ">=1.0.0",
-        "helsingborg-stad/modularity-form-builder": ">=1.9.0",
+        "helsingborg-stad/modularity-form-builder": "1.9.2",
         "helsingborg-stad/modularity-sections": "1.3.3",
         "helsingborg-stad/wp-page-for-post-type": "1.0.7",
         "helsingborg-stad/google-analythics": ">=1.0.0",
