--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "require": {
         "composer/installers": "~1.0",
         "johnpbloch/wordpress": "^5.0.0",
-        "helsingborg-stad/Modularity": "2.13.2",
+        "helsingborg-stad/Modularity": ">=2.13.2",
         "helsingborg-stad/municipio": ">=1.32.4",
         "helsingborg-stad/familjenhelsingborg": "1.0.2",
         "helsingborg-stad/lix-calculator": ">=1.0.0",
@@ -51,7 +51,7 @@
         "helsingborg-stad/multisite-role-propagation": ">=1.0.0",
         "helsingborg-stad/modularity-form-builder": "1.9.2",
         "helsingborg-stad/modularity-sections": "1.3.3",
-        "helsingborg-stad/wp-page-for-post-type": "1.0.7",
+        "helsingborg-stad/wp-page-for-post-type": ">=1.0.7",
         "helsingborg-stad/google-analythics": ">=1.0.0",
         "helsingborg-stad/modularity-checklist": ">=1.0.0",
         "helsingborg-stad/idea-manager": ">=1.1.1",
@@ -66,9 +66,9 @@
         "wpackagist-plugin/wordpress-importer": "0.6.3",
         "wpackagist-plugin/autodescription": ">=3.0.4",
         "wpackagist-plugin/wp-mail-smtp": "^1.2",
-        "wpackagist-plugin/redirection": "3.4.1",
-        "helsingborg-stad/modularity-resource-booking": "1.4.6",
-        "helsingborg-stad/modularity-login-form": "1.1.0",
+        "wpackagist-plugin/redirection": ">=3.4.1",
+        "helsingborg-stad/modularity-resource-booking": ">=1.4.6",
+        "helsingborg-stad/modularity-login-form": ">=1.1.0",
         "wpackagist-plugin/user-switching": "^1.4",
         "helsingborg-stad/modularity-json-render": "^1.1",
         "wpackagist-plugin/woocommerce": "^3.5",
