--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "require": {
         "composer/installers": "~1.0",
         "johnpbloch/wordpress": "^5.0.0",
-        "helsingborg-stad/Modularity": ">=2.13.2",
+        "helsingborg-stad/modularity": ">=2.13.2",
         "helsingborg-stad/municipio": ">=1.32.4",
         "helsingborg-stad/familjenhelsingborg": "1.0.2",
         "helsingborg-stad/lix-calculator": ">=1.0.0",
@@ -37,7 +37,7 @@
         "helsingborg-stad/force-ssl": ">=1.0.0",
         "helsingborg-stad/readspeaker-helper": ">=1.0.0",
         "helsingborg-stad/broken-link-detector": ">=1.0.0",
-        "helsingborg-stad/Customer-feedback": ">=1.0.0",
+        "helsingborg-stad/customer-feedback": ">=1.0.0",
         "helsingborg-stad/acf-ux-collapse": ">=1.0.0",
         "helsingborg-stad/search-notices": ">=1.0.0",
         "helsingborg-stad/wp-search-statistics": ">=0.1.0",
@@ -83,11 +83,12 @@
         "helsingborg-stad/algolia-index-modularity-addon": "^1.0",
         "helsingborg-stad/algolia-index": "^1.0",
         "helsingborg-stad/municipio-innovation-theme": "1.1.1",
-        "helsingborg-stad/action-municipio-childtheme": "1.1.2",
+        "helsingborg-stad/action-municipio-childtheme": "^1.1.3",
         "helsingborg-stad/algolia-index-js-searchpage-addon": "^1.0",
         "wpackagist-plugin/acf-to-rest-api": "^3.2",
         "wpackagist-plugin/wp-webhooks": "^2.0",
-        "helsingborg-stad/skyfish-integration": "^0.8.8"
+        "helsingborg-stad/skyfish-integration": "^0.9.1",
+        "helsingborg-stad/media-usage": "^1.3"
     },
     "extra": {
         "wordpress-install-dir": "wp",
