Remove the blade cache in cache clear step

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,13 +30,15 @@ jobs:
         remote_user: ${{ secrets.DEPLOY_AWS_REMOTE_USER }}
         remote_key: ${{ secrets.DEPLOY_KEY }}
 
-    - name: Clear varnish and redis object cache.
+    - name: Clear varnish and redis object cache and blade cache.
       uses: appleboy/ssh-action@master
       with:
         script: |
           cd ${{ secrets.DEPLOY_REMOTE_PATH_TEST_KAMPANJ_HELSINGBORG_SE }}
           wp varnish purge --allow-root
           wp cache flush --allow-root
+          cd ${{ secrets.DEPLOY_REMOTE_PATH_TEST_KAMPANJ_HELSINGBORG_SE }}/uploads/cache/blade-cache
+          rm -rf *
         host: ${{ secrets.DEPLOY_REMOTE_HOST_TEST_KAMPANJ_HELSINGBORG_SE }}
         username: ${{ secrets.DEPLOY_AWS_REMOTE_USER }}
         key: ${{ secrets.DEPLOY_KEY }}
