--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "composer/installers": "~1.0",
         "johnpbloch/wordpress": "^5.0.0",
         "helsingborg-stad/modularity": "2.13.3",
-        "helsingborg-stad/municipio": ">=1.32.4",
+        "helsingborg-stad/municipio": ">=1.0.0",
         "helsingborg-stad/familjenhelsingborg": "1.0.2",
         "helsingborg-stad/lix-calculator": ">=1.0.0",
         "helsingborg-stad/content-scheduler": ">=1.0.0",
@@ -79,10 +79,10 @@
         "wpackagist-plugin/wp-rest-filter": "^1.4",
         "wpackagist-plugin/safe-svg": "^1.9",
         "helsingborg-stad/modularity-comments": "^1.0",
-        "helsingborg-stad/api-project-manager-integration": "1.6.1",
+        "helsingborg-stad/api-project-manager-integration": "dev-feature/toolbox",
         "helsingborg-stad/algolia-index-modularity-addon": "^1.0",
         "helsingborg-stad/algolia-index": "^1.0",
-        "helsingborg-stad/municipio-innovation-theme": "1.2.0",
+        "helsingborg-stad/municipio-innovation-theme": "dev-feature/toolbox",
         "helsingborg-stad/action-municipio-childtheme": "^1.1.5",
         "helsingborg-stad/algolia-index-js-searchpage-addon": "^1.0",
         "wpackagist-plugin/acf-to-rest-api": "^3.2",
