--- a/composer.json
+++ b/composer.json
@@ -87,7 +87,8 @@
         "wpackagist-plugin/wp-webhooks": "^2.0",
         "helsingborg-stad/skyfish-integration": "^0.9.1",
         "helsingborg-stad/media-usage": "^1.3",
-        "wpackagist-plugin/wp-piwik": "^1.0"
+        "wpackagist-plugin/wp-piwik": "^1.0",
+        "wpackagist-plugin/nginx-helper": "^2.2"
     },
     "extra": {
         "wordpress-install-dir": "wp",
